fixed issue with first tooltip being cutoff

--- a/src/content/styles.css
+++ b/src/content/styles.css
@@ -24,11 +24,8 @@
     text-align: center;
     border-radius: 8px;
     padding: 12px;
-    position: absolute;
-    z-index: 1;
-    top: 50%;
-    right: 125%;
-    transform: translateY(-50%);
+    position: fixed;
+    z-index: 1000;
     opacity: 0;
     transition: opacity 0.2s ease-in-out;
     white-space: nowrap;
